Bug 422729 - No action (assignable shortcut) for Magnetic Selection Tool
Summary: No action (assignable shortcut) for Magnetic Selection Tool
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools/Selection (other bugs)
Version First Reported In: 4.3.0-beta2
Platform: macOS (DMG) All
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-06-10 09:32 UTC by Yu-Hsuan Lai
Modified: 2020-06-19 09:06 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Yu-Hsuan Lai 2020-06-10 09:32:43 UTC
SUMMARY
It seems that Magnetic Selection Tool isn't an action, and therefore it's impossible to assign a shortcut for it.

STEPS TO REPRODUCE
1. Open Keyboard Shortcuts configuration

OBSERVED RESULT
Magnetic Selection Tool isn't there

EXPECTED RESULT
Being able to assign a shortcut for Magnetic Selection Tool

SOFTWARE/OS VERSIONS
Krita: 4.3.0-beta2

ADDITIONAL INFORMATION
Comment 1 Halla Rempt 2020-06-10 09:37:35 UTC
Looks like most of the .action files in the plugins/tools folder are broken, which is why the actions are also present in krita/krita.action, which shouldn't be necessary...
Comment 2 Yu-Hsuan Lai 2020-06-10 09:47:49 UTC
(In reply to Boudewijn Rempt from comment #1)
> Looks like most of the .action files in the plugins/tools folder are broken,
> which is why the actions are also present in krita/krita.action, which
> shouldn't be necessary...

Is it possible to workaround this without building my own Krita? Like manually creating this .actions file with Magnetic Selection Tool or something?
Comment 3 Halla Rempt 2020-06-10 09:56:29 UTC
Yes, that's possible, but I'm working on a fix right now, which will be in tonights stable nightly build.
Comment 4 Halla Rempt 2020-06-10 10:27:41 UTC
Git commit 5b41b826fb1d4fe8faf9a8d15b4def762dd468bc by Boudewijn Rempt.
Committed on 10/06/2020 at 10:25.
Pushed by rempt into branch 'master'.

Fix the plugins/tool action files

These files only had text, the action was defined in krita/krita.action.
There are still tools in plugins that have their actions defined in
krita/krita.action, but splitting them out in action files in the plugins
can wait.

M  +0    -121  krita/krita.action
M  +9    -5    libs/widgetutils/kis_action_registry.cpp
M  +12   -2    plugins/tools/basictools/KisToolPath.action
M  +12   -2    plugins/tools/basictools/KisToolPencil.action
M  +12   -2    plugins/tools/selectiontools/KisToolSelectContiguous.action
M  +12   -2    plugins/tools/selectiontools/KisToolSelectElliptical.action
M  +12   -2    plugins/tools/selectiontools/KisToolSelectMagnetic.action
M  +12   -2    plugins/tools/selectiontools/KisToolSelectOutline.action
M  +12   -2    plugins/tools/selectiontools/KisToolSelectPath.action
M  +10   -2    plugins/tools/selectiontools/KisToolSelectPolygonal.action
M  +12   -2    plugins/tools/selectiontools/KisToolSelectRectangular.action
M  +12   -2    plugins/tools/selectiontools/KisToolSelectSimilar.action
M  +3    -2    plugins/tools/svgtexttool/SvgTextTool.action
M  +12   -2    plugins/tools/tool_crop/KisToolCrop.action
M  +12   -2    plugins/tools/tool_polygon/KisToolPolygon.action
M  +12   -2    plugins/tools/tool_polyline/KisToolPolyline.action
M  +12   -2    plugins/tools/tool_transform2/KisToolTransform.action

https://invent.kde.org/graphics/krita/commit/5b41b826fb1d4fe8faf9a8d15b4def762dd468bc
Comment 5 Halla Rempt 2020-06-10 10:31:12 UTC
Git commit ce3a1a3194dc4347d582ff20781f4cae16a6f2cd by Boudewijn Rempt.
Committed on 10/06/2020 at 10:30.
Pushed by rempt into branch 'master'.

Add a warning if an action file is empty

This mostly seems to happen when people forget thet text element,
though, the parser isn't the most robust in the world.

M  +5    -5    libs/widgetutils/kis_action_registry.cpp

https://invent.kde.org/graphics/krita/commit/ce3a1a3194dc4347d582ff20781f4cae16a6f2cd
Comment 6 Halla Rempt 2020-06-10 10:31:24 UTC
Git commit 741ba2ad61109764e5ddd8f8c1bf9b1d11b7207e by Boudewijn Rempt.
Committed on 10/06/2020 at 10:31.
Pushed by rempt into branch 'krita/4.3'.

Add a warning if an action file is empty

This mostly seems to happen when people forget thet text element,
though, the parser isn't the most robust in the world.
(cherry picked from commit ce3a1a3194dc4347d582ff20781f4cae16a6f2cd)

M  +5    -5    libs/widgetutils/kis_action_registry.cpp

https://invent.kde.org/graphics/krita/commit/741ba2ad61109764e5ddd8f8c1bf9b1d11b7207e
Comment 7 Halla Rempt 2020-06-10 10:31:25 UTC
Git commit 8b1d39d96f2c3a38a6ca49f1d44d5666d145ff80 by Boudewijn Rempt.
Committed on 10/06/2020 at 10:30.
Pushed by rempt into branch 'krita/4.3'.

Fix the plugins/tool action files

These files only had text, the action was defined in krita/krita.action.
There are still tools in plugins that have their actions defined in
krita/krita.action, but splitting them out in action files in the plugins
can wait.
(cherry picked from commit 5b41b826fb1d4fe8faf9a8d15b4def762dd468bc)

M  +0    -121  krita/krita.action
M  +9    -3    libs/widgetutils/kis_action_registry.cpp
M  +12   -2    plugins/tools/basictools/KisToolPath.action
M  +12   -2    plugins/tools/basictools/KisToolPencil.action
M  +12   -2    plugins/tools/selectiontools/KisToolSelectContiguous.action
M  +12   -2    plugins/tools/selectiontools/KisToolSelectElliptical.action
M  +12   -2    plugins/tools/selectiontools/KisToolSelectMagnetic.action
M  +12   -2    plugins/tools/selectiontools/KisToolSelectOutline.action
M  +12   -2    plugins/tools/selectiontools/KisToolSelectPath.action
M  +10   -2    plugins/tools/selectiontools/KisToolSelectPolygonal.action
M  +12   -2    plugins/tools/selectiontools/KisToolSelectRectangular.action
M  +12   -2    plugins/tools/selectiontools/KisToolSelectSimilar.action
M  +3    -2    plugins/tools/svgtexttool/SvgTextTool.action
M  +12   -2    plugins/tools/tool_crop/KisToolCrop.action
M  +12   -2    plugins/tools/tool_polygon/KisToolPolygon.action
M  +12   -2    plugins/tools/tool_polyline/KisToolPolyline.action
M  +12   -2    plugins/tools/tool_transform2/KisToolTransform.action

https://invent.kde.org/graphics/krita/commit/8b1d39d96f2c3a38a6ca49f1d44d5666d145ff80
Comment 8 Yu-Hsuan Lai 2020-06-18 16:17:38 UTC
Was this fix supposed to be included in the 4.3.0 release? I just downloaded 4.3.0 (not 4.3.0-beta2) but Magnetic Selection Tool still has no assignable shortcut.
Comment 9 Halla Rempt 2020-06-19 09:06:59 UTC
It's only in the 4.3 branch; I fixed it after the 4.3.0 went into hard freeze.