Fix the plugins/tool action files

These files only had text, the action was defined in krita/krita.action.
There are still tools in plugins that have their actions defined in
krita/krita.action, but splitting them out in action files in the plugins
can wait.

BUG:422729