libs/widgetutils/kis_action_registry.cpp
@@ -320,7 +320,7 @@ void KisActionRegistry::Private::loadActionFiles()
 
     // Extract actions all XML .action files.
     Q_FOREACH (const QString &actionDefinition, actionDefinitions)  {
-        dbgAction << "\tLoading Action File" << actionDefinition;
+        qDebug() << "\tLoading Action File" << actionDefinition;
         QDomDocument doc;
         QFile f(actionDefinition);
         f.open(QFile::ReadOnly);
@@ -330,7 +330,7 @@ void KisActionRegistry::Private::loadActionFiles()
         QString collectionName = base.attribute("name");
         QString version        = base.attribute("version");
         if (version != "2") {
-            errAction << ".action XML file" << actionDefinition << "has incorrect version; skipping.";
+            qDebug() << ".action XML file" << actionDefinition << "has incorrect version; skipping.";
             continue;
         }
 
@@ -350,12 +350,12 @@ void KisActionRegistry::Private::loadActionFiles()
             while (!actionXml.isNull()) {
                 if (actionXml.tagName() == "Action") {
                     // Read name from format <Action name="save">
-                    QString name      = actionXml.attribute("name");
-                    dbgAction << "\t\tloading xml data for action" << name;
+                    QString name = actionXml.attribute("name");
+                    qDebug() << "\t\tloading xml data for action" << name;
 
                     // Bad things
                     if (name.isEmpty()) {
-                        errAction << "Unnamed action in definitions file " << actionDefinition;
+                        qDebug() << "Unnamed action in definitions file " << actionDefinition;
                     }
 
                     else if (actionInfoList.contains(name)) {
@@ -374,6 +374,10 @@ void KisActionRegistry::Private::loadActionFiles()
 
                         info.categoryName    = categoryName;
                         info.collectionName  = collectionName;
+
+                        if (name == "KisToolSelectMagnetic") {
+                            qDebug() << categoryName << collectionName;
+                        }
 
                         actionInfoList.insert(name,info);
                     }
